--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
         <label class="logo">EduTech</label>
         <uL>
-            <li><a href="#">Home</a></li>
+            <li><a class="active" href="#">Home</a></li>
             <li><a href="#">Courses</a></li>
             <li><a href="#">Exams</a></li>
             <li><a href="#">Live Classes</a></li>
