--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <li><a href="#">Live Classes</a></li>
             <li><a href="#">About Us</a></li>
         </uL>
+        <label id="icon">
+            <span class="bars"></span>
+        </label>
     </nav>
 </body>
 </html>
