--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             <span class="bars"></span>
         </label>
     </nav>
-
+    <section id="home">
+        <h1>hello</h1>
+    </section>
     <script src="js/jquery.js"></script>
 </body>
 </html>
