--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
         </label>
     </nav>
     <section id="home">
-        <h1>hello</h1>
+        <div class="home-container">
+            <div class="home-text">
+                <p>ihvhdfoivmdfkjvdvd;v.</p>
+                <button class="btn1">Ask a doubt</button>
+            </div>
+            <div class="home-img">
+                <img src="images/video-conference-5352757_1280.png">
+            </div>
+        </div>
     </section>
     <script src="js/jquery.js"></script>
 </body>
