--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="home">
         <div class="home-container">
             <div class="home-text">
-                <p>ihvhdfoivmdfkjvdvd;v.</p>
+                <h1>Ask your doubts in your own language..</h1>
                 <button class="btn1">Ask a doubt</button>
             </div>
             <div class="home-img">
