--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="home-container">
             <div class="home-text">
                 <h1>Ask your doubts in your own language..</h1>
-                <button class="btn1">Ask a doubt</button>
+                <button class="btn1">Ask your doubt</button>
             </div>
             <div class="home-img">
                 <img src="images/video-conference-5352757_1280.png">
