--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edutech</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -23,11 +26,11 @@
     </nav>
     <section id="home">
         <div class="home-container">
-            <div class="home-text">
+            <div class="home-text animate__animated animate__fadeInLeft">
                 <h1>Ask your doubts in your own language..</h1>
                 <button class="btn1">Ask your doubt</button>
             </div>
-            <div class="home-img">
+            <div class="home-img animate__animated animate__bounceIn">
                 <img src="images/video-conference-5352757_1280.png">
             </div>
         </div>
