--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h1>Ask your doubts in your own language..</h1>
                 <button class="btn1">Ask your doubt</button>
             </div>
-            <div class="home-img animate__animated animate__bounceIn">
+            <div class="home-img animate__animated animate__fadeInRight">
                 <img src="images/video-conference-5352757_1280.png">
             </div>
         </div>
