--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
             </div>
         </div>
     </section>
+    <section id="service">
+        <h1>Sessions with Teachers</h1>
+        <span class="line"></span>
+        <div class="service-container">
+            <div class="serv-imag">
+                <img src="images/online-5368573_1280.png">
+            </div>
+            <div class="serv-content">
+                <h2>One on One interactive doubt clearing sessions with teachers.</h2>
+            </div>
+        </div>
+    </section>
     <script src="js/jquery.js"></script>
 </body>
 </html>
