Update service section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,14 @@
                 <img src="images/online-5368573_1280.png">
             </div>
             <div class="serv-content">
-                <h2>One on One interactive doubt clearing sessions with teachers.</h2>
+                <div class="serv-text">
+                    <img src="images/video-tutorials.png">
+                    <h2>One on One interactive doubt clearing sessions with teachers.</h2>
+                </div>
+                <div class="serv-text">
+                    <img src="images/elearning.png">
+                    <h2>Services available 24/7</h2>
+                </div>
             </div>
         </div>
     </section>
