--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
         </div>
         </div>
     </section>
+    <section id="sub">
+        <img src="images/wavesOpacity.svg">
+    </section>
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
