--- a/index.html
+++ b/index.html
@@ -64,12 +64,15 @@
     </section>
     <section id="sub">
         <img src="images/wavesOpacity.svg">
+        
     </section>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
       </script>
+    <script src="js/anime.min.js"></script>
     <script src="js/jquery.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
