--- a/index.html
+++ b/index.html
@@ -64,7 +64,23 @@
     </section>
     <section id="sub">
         <img src="images/wavesOpacity.svg">
-        
+        <div class="sub-container">
+            <div class="sub-card">
+                <img src="images/online-3412498_1280.jpg">
+                <h2>Daily Live Classes</h2>
+                <p>nhcpsnmohvmjdskjvhmdcvhmslvjod</p>
+            </div>
+            <div class="sub-card">
+                <img src="images/stay-home-5205390_1280.png">
+                <h2>Daily Live Classes</h2>
+                <p>nhcpsnmohvmjdskjvhmdcvhmslvjodsmv</p>
+            </div>
+            <div class="sub-card">
+                <img src="images/online-5268334_1280.png">
+                <h2>Daily Live Classes</h2>
+                <p>nhcpsnmohvmjdskjvhmdcvhmslvjodsmv</p>
+            </div>
+        </div>
     </section>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
