Update card section

--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
         <img src="images/wavesOpacity.svg">
         <div class="sub-container">
             <div class="sub-card">
-                <img src="images/online-3412498_1280.jpg">
-                <h2>Daily Live Classes</h2>
-                <p>nhcpsnmohvmjdskjvhmdcvhmslvjod</p>
-            </div>
-            <div class="sub-card">
                 <img src="images/stay-home-5205390_1280.png">
                 <h2>Daily Live Classes</h2>
-                <p>nhcpsnmohvmjdskjvhmdcvhmslvjodsmv</p>
+                <p>Chat with educators, ask questions, answer live polls, and get your doubts cleared - all while the class is going on</p>
             </div>
             <div class="sub-card">
-                <img src="images/online-5268334_1280.png">
-                <h2>Daily Live Classes</h2>
-                <p>nhcpsnmohvmjdskjvhmdcvhmslvjodsmv</p>
+                <img src="images/online-3412498_1280.jpg">
+                <h2>Practice and revise</h2>
+                <p>Learning isn't just limited to classes with our practice section, mock tests and lecture notes shared as PDFs for your revision</p>
+            </div>
+            <div class="sub-card">
+                <img src="images/book-3955129_1280.jpg">
+                <h2>Learn anywhere</h2>
+                <p>One subscription gets you access to all our live and recorded classes to watch from the comfort of any of your devices</p>
             </div>
         </div>
     </section>
