--- a/index.html
+++ b/index.html
@@ -87,8 +87,12 @@
             </div>
         </div>
         </div>
+        <div class="work">
+        <div class="animation">
+            <div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div>
+        </div>
+        </div>
     </section>
-
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
