--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
         </div>
         </div>
         <div class="work">
-        <div class="animation">
-            <div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div>
-        </div>
+            <div class="animation">
+                <div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div>
+            </div>
         </div>
     </section>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
