--- a/index.html
+++ b/index.html
@@ -88,22 +88,20 @@
         </div>
         </div>
         <div class="work">
-            <div class="animation">
-                <div class="line">
-                <div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div>
-                <div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div>
-                <div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div>
+            <h1>How it Works?</h1>
+            <span class="line white"></span>
+            <div class="work-content">
+                <div class="work-text">
+                    <h2>1. Have a doubt?</h2>
+                    <img src="images/online-learning.png">
                 </div>
-                <div class="line">
-                    <div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div>
-                    <div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div>
-                    <div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div>
+                <div class="work-text">
+                    <h2>2. Type your question OR Upload an Image</h2>
+                    <img src="images/online-class.png">
                 </div>
-                <div class="line">
-                    <div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div>
-                    <div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div>
-                    <div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div><div class="square"></div>
-                </div>
+                <div class="work-text">
+                    <h2>3. Get your solution</h2>
+                    <img src="images/online-education.png">
                 </div>
             </div>
         </div>
