--- a/index.html
+++ b/index.html
@@ -113,9 +113,33 @@
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
                 <!-- Slides -->
-                <div class="swiper-slide">Slide 1</div>
-                <div class="swiper-slide">Slide 2</div>
-                <div class="swiper-slide">Slide 3</div>
+                <div class="swiper-slide">
+                    <div class="teachers">
+                        <div class="t-card">
+                            <img src="images/book-3955129_1280.jpg">
+                            <h1>Stevin Prince </h1>
+                            <p>hnmvdfjmv,dfvnmkdfmnvildfmvdv,d;l,kvdpvkjopjvm,,svndflvkndfokvjdfv,dvmvdf,</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="teachers">
+                        <div class="t-card">
+                            <img src="images/book-3955129_1280.jpg">
+                            <h1>Stevin Prince </h1>
+                            <p>hnmvdfjmv,dfvnmkdfmnvildfmvdv,d;l,kvdpvkjopjvm,,svndflvkndfokvjdfv,dvmvdf,</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="teachers">
+                        <div class="t-card">
+                            <img src="images/book-3955129_1280.jpg">
+                            <h1>Stevin Prince </h1>
+                            <p>hnmvdfjmv,dfvnmkdfmnvildfmvdv,d;l,kvdpvkjopjvm,,svndflvkndfokvjdfv,dvmvdf,</p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <!-- If we need pagination -->
             <div class="swiper-pagination"></div>
