--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
             </div>
         </div>
         <div class="swiper">
+            <h1>our top tutors</h1>
         <!-- Slider main container -->
         <div class="swiper-container">
             <!-- Additional required wrapper -->
