--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <div class="swiper-slide">
                     <div class="teachers">
                         <div class="t-card">
-                            <img src="images/book-3955129_1280.jpg">
+                            <img src="images/Stevin Prince.jpg">
                             <h1>Stevin Prince </h1>
                             <p>hnmvdfjmv,dfvnmkdfmnvildfmvdv,d;l,kvdpvkjopjvm,,svndflvkndfokvjdfv,dvmvdf,</p>
                         </div>
@@ -126,8 +126,8 @@
                 <div class="swiper-slide">
                     <div class="teachers">
                         <div class="t-card">
-                            <img src="images/book-3955129_1280.jpg">
-                            <h1>Stevin Prince </h1>
+                            <img src="images/contributor5.jpg">
+                            <h1>Sneha Singh</h1>
                             <p>hnmvdfjmv,dfvnmkdfmnvildfmvdv,d;l,kvdpvkjopjvm,,svndflvkndfokvjdfv,dvmvdf,</p>
                         </div>
                     </div>
@@ -135,8 +135,8 @@
                 <div class="swiper-slide">
                     <div class="teachers">
                         <div class="t-card">
-                            <img src="images/book-3955129_1280.jpg">
-                            <h1>Stevin Prince </h1>
+                            <img src="images/contributor7.jpg">
+                            <h1>Hemesh Singh</h1>
                             <p>hnmvdfjmv,dfvnmkdfmnvildfmvdv,d;l,kvdpvkjopjvm,,svndflvkndfokvjdfv,dvmvdf,</p>
                         </div>
                     </div>
