--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <div class="t-card">
                             <img src="images/Stevin Prince.jpg">
                             <h1>Stevin Prince </h1>
-                            <p>hnmvdfjmv,dfvnmkdfmnvildfmvdv,d;l,kvdpvkjopjvm,,svndflvkndfokvjdfv,dvmvdf,</p>
+                            <p>“Science is everywhere - let’s investigate through experiments!“</p>
                         </div>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                         <div class="t-card">
                             <img src="images/contributor5.jpg">
                             <h1>Sneha Singh</h1>
-                            <p>hnmvdfjmv,dfvnmkdfmnvildfmvdv,d;l,kvdpvkjopjvm,,svndflvkndfokvjdfv,dvmvdf,</p>
+                            <p>“I’ll make you fall in love with Maths through fun games!”</p>
                         </div>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                         <div class="t-card">
                             <img src="images/contributor7.jpg">
                             <h1>Hemesh Singh</h1>
-                            <p>hnmvdfjmv,dfvnmkdfmnvildfmvdv,d;l,kvdpvkjopjvm,,svndflvkndfokvjdfv,dvmvdf,</p>
+                            <p>“I’ll teach you how to write creatively and convincingly!”</p>
                         </div>
                     </div>
                 </div>
