--- a/index.html
+++ b/index.html
@@ -93,17 +93,23 @@
             <h1>How it Works?</h1>
             <span class="line white"></span>
             <div class="work-content">
+                <div data-aos="fade-right" data-aos-delay="300">
                 <div class="work-text">
                     <h2>1. Have a doubt?</h2>
                     <img src="images/online-learning.png">
                 </div>
+                </div>
+                <div data-aos="fade-left" data-aos-delay="300">
                 <div class="work-text">
                     <h2>2. Type your question OR Upload an Image</h2>
                     <img src="images/online-class.png">
                 </div>
+                </div>
+                <div data-aos="fade-right" data-aos-delay="300">
                 <div class="work-text">
                     <h2>3. Get your solution</h2>
                     <img src="images/online-education.png">
+                </div>
                 </div>
             </div>
         </div>
