--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
         <div class="swiper">
             <h1>our top tutors</h1>
         <!-- Slider main container -->
+        <div data-aos="fade-up" data-aos-delay="300">
         <div class="swiper-container">
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
@@ -154,6 +155,7 @@
             <!-- If we need navigation buttons -->
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
+        </div>
         </div>
     </div>
     </section>
