--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="swiper">
             <h1>our top tutors</h1>
         <!-- Slider main container -->
-        <div data-aos="fade-up" data-aos-delay="300">
+        <div data-aos="zoom-in" data-aos-delay="300">
         <div class="swiper-container">
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
