Update course section

--- a/index.html
+++ b/index.html
@@ -157,6 +157,31 @@
             <div class="swiper-button-next"></div>
         </div>
         </div>
+
+    </div>
+    <div class="course-section">
+        <div class="course-head">
+            <h1>Courses</h1>
+            <div class="border"></div>
+        </div>
+        <div class="course-container">
+            <div class="course-content">
+                <img src="images/online-class.png">
+                <h2>mathemathics</h2>
+            </div>
+            <div class="course-content">
+                <img src="images/online-class.png">
+                <h2>mathemathics</h2>
+            </div>
+            <div class="course-content">
+                <img src="images/online-class.png">
+                <h2>mathemathics</h2>
+            </div>
+            <div class="course-content">
+                <img src="images/online-class.png">
+                <h2>mathemathics</h2>
+            </div>
+        </div>
     </div>
     </section>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
