--- a/index.html
+++ b/index.html
@@ -166,20 +166,32 @@
         </div>
         <div class="course-container">
             <div class="course-content">
-                <img src="images/online-class.png">
+                <img src="images/calculating.png">
                 <h2>mathemathics</h2>
             </div>
             <div class="course-content">
-                <img src="images/online-class.png">
-                <h2>mathemathics</h2>
+                <img src="images/chemistry.png">
+                <h2>chemistry</h2>
+            </div>
+            <div class="course-content">
+                <img src="images/atom.png">
+                <h2>physics</h2>
             </div>
             <div class="course-content">
                 <img src="images/online-class.png">
-                <h2>mathemathics</h2>
+                <h2>biology</h2>
             </div>
             <div class="course-content">
-                <img src="images/online-class.png">
-                <h2>mathemathics</h2>
+                <img src="images/english.png">
+                <h2>english</h2>
+            </div>
+            <div class="course-content">
+                <img src="images/social-science.png">
+                <h2>social science</h2>
+            </div>
+            <div class="course-content">
+                <img src="images/desktop.png">
+                <h2>Computer</h2>
             </div>
         </div>
     </div>
