--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <h2>physics</h2>
             </div>
             <div class="course-content">
-                <img src="images/online-class.png">
+                <img src="images/dna.png">
                 <h2>biology</h2>
             </div>
             <div class="course-content">
@@ -192,6 +192,10 @@
             <div class="course-content">
                 <img src="images/desktop.png">
                 <h2>Computer</h2>
+            </div>
+            <div class="course-content">
+                <img src="images/translate.png">
+                <h2>languages</h2>
             </div>
         </div>
     </div>
