--- a/index.html
+++ b/index.html
@@ -165,10 +165,12 @@
             <div class="border"></div>
         </div>
         <div class="course-container">
+            <div data-aos="zoom-in" data-aos-delay="300"></div>
             <div class="course-content">
                 <img src="images/calculating.png">
                 <h2>mathemathics</h2>
             </div>
+            <div data-aos="zoom-in" data-aos-delay="300"></div>
             <div class="course-content">
                 <img src="images/chemistry.png">
                 <h2>chemistry</h2>
