--- a/index.html
+++ b/index.html
@@ -164,13 +164,12 @@
             <h1>Courses</h1>
             <div class="border"></div>
         </div>
+        <div data-aos="zoom-in" data-aos-delay="300">
         <div class="course-container">
-            <div data-aos="zoom-in" data-aos-delay="300"></div>
             <div class="course-content">
                 <img src="images/calculating.png">
                 <h2>mathemathics</h2>
             </div>
-            <div data-aos="zoom-in" data-aos-delay="300"></div>
             <div class="course-content">
                 <img src="images/chemistry.png">
                 <h2>chemistry</h2>
@@ -200,6 +199,7 @@
                 <h2>languages</h2>
             </div>
         </div>
+    </div>
     </div>
     </section>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
