--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <h1>Courses</h1>
             <div class="border"></div>
         </div>
-        <div data-aos="zoom-in" data-aos-delay="300">
+        <div data-aos="zoom-out" data-aos-delay="300">
         <div class="course-container">
             <div class="course-content">
                 <img src="images/calculating.png">
@@ -203,19 +203,24 @@
     </div>
     <div class="faq-section">
         <h1>Frequently Asked Questions?</h1>
-        <button class="accordion">Section 1</button>
+        <button class="accordion">What is EduTech?</button>
         <div class="panel">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>EduTech provides India’s best LIVE online classes with the country’s top 0.1% tutors and a 6:1 student-teacher ratio, so every student can score better marks and look forward to a bright future! Lido has live classes in Maths, Science, English, and Coding, and more. We cater to students of KG, class 1st, class 2nd, class 3rd, all the way to class 12th.</p>
         </div>
 
-        <button class="accordion">Section 2</button>
+        <button class="accordion">Will EduTech help with homework and clearing doubts?</button>
         <div class="panel">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>Our 6:1 student-teacher ratio allows every student enough time with the teacher to clarify doubts before the class ends. Further, our AI-driven homework solutions help students practice and learn independently, even without the teacher around</p>
         </div>
 
-        <button class="accordion">Section 3</button>
+        <button class="accordion">How does EduTech select teachers?</button>
         <div class="panel">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>We select only the top 0.1% teachers in India from the world’s best institutes like the IITs, MIT, Stanford, and Harvard, among others to teach your child in our live online classes. We guarantee that every teacher is well-trained to ensure excellent results for your child. Instead of you having to search for an online tutor for your child, our advanced AI algorithm finds the perfect teacher for your child. </p>
+        </div>
+
+        <button class="accordion">Start learning with us!</button>
+        <div class="panel">
+        <p>If you are a motivated parent and want to empower your child to learn skills, master concepts, and change the world, join EduTech now. If you or your child want to learn more about the opportunities provided by our live online classes/programs, explore the Maths, Science, English, and Coding classes/courses offered by EduTech Learning Jr. and enroll for a free class now! Remember, the trial is totally free!</p>
         </div>
     </div>
     </section>
