--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <script src="https://kit.fontawesome.com/087042e108.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -223,7 +224,49 @@
         <p>If you are a motivated parent and want to empower your child to learn skills, master concepts, and change the world, join EduTech now. If you or your child want to learn more about the opportunities provided by our live online classes/programs, explore the Maths, Science, English, and Coding classes/courses offered by EduTech Learning Jr. and enroll for a free class now! Remember, the trial is totally free!</p>
         </div>
     </div>
+     <!-- Site footer -->
+    <footer>
+        <div class="footer-container">
+            <div class="left box">
+                <h2>About us</h2>
+                <div class="foot-text">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta dolorem laboriosam, laborum nisi porro debitis quas consectetur sequi eos quasi recusandae saepe minus repudiandae laudantium officia quos nulla similique minima.
+                </div>
+                <div class="social">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-youtube"></i>
+                </div>
+            </div>
+            <div class="middle box">
+                <h2>Links</h2>
+                <div class="foot-links">
+                    <uL>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Courses</a></li>
+                        <li><a href="#">Exams</a></li>
+                        <li><a href="#">Live Classes</a></li>
+                        <li><a href="#">About Us</a></li>
+                    </uL>
+                </div>
+            </div>
+            <div class="right box">
+                <h2>Send Message</h2>
+                <div class="contact">
+                    <form action="#">
+                        <label>Email</label>
+                        <input type="email" name="email" class="email" required/>
+                        <label>Message</label>
+                        <textarea rows="2" cols="20"></textarea>
+                        <button class="f-btn">Send Message</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </footer>
     </section>
+    
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
