--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta dolorem laboriosam, laborum nisi porro debitis quas consectetur sequi eos quasi recusandae saepe minus repudiandae laudantium officia quos nulla similique minima.
                 </div>
                 <div class="social">
-                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-facebook"></i>
                     <i class="fab fa-instagram"></i>
                     <i class="fab fa-twitter"></i>
                     <i class="fab fa-youtube"></i>
