--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
                 <div class="contact">
                     <form action="#">
                         <label>Email</label>
-                        <input type="email" name="email" class="email" required/>
+                        <input type="email" name="email" class="email" placeholder="Email Id" required/>
                         <label>Message</label>
-                        <textarea rows="2" cols="20"></textarea>
+                        <textarea rows="2" cols="20" placeholder="Message"></textarea>
                         <button class="f-btn">Send Message</button>
                     </form>
                 </div>
